fix: enhance text styling and structure for improved readability

--- a/theme/global.css
+++ b/theme/global.css
@@ -27,5 +27,4 @@ span {
 span.geerdet {
   transform-origin: 0 0;
   color: #899c3d;
-  transform: rotate(10deg);
 }
